# IPB-APS-ConversationalAI

./: .gitignore  Architecture.md  LICENSE  README.md  index.html  package-lock.json  package.json  plan.md  tailwind.config.js
python-sidecar/: ai_pipeline.py  audio_buffer.py  main.py  requirements.txt
src/: App.jsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/components/: AudioVisualizer.jsx  MicButton.jsx  Settings.jsx  Timer.jsx
